--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a id="btnAnl" href="https://wa.me/554396593397" class="btn btn-primary btn-lg">
-                    <i class="bi bi-whatsapp"></i> Londrina - Souza Naves 484
+                    <i class="bi bi-whatsapp"></i> Londrina - Souza Naves 726
                 </a>
             </div>
             <div class="d-flex flex-column flex-grow-1" style="flex-basis: 400px;">
@@ -71,7 +71,7 @@
                     height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a id="btnAnl" href="https://wa.me/554330391309" class="btn btn-primary btn-lg">
-                    <i class="bi bi-whatsapp"></i> Londrina - Souza Naves 726
+                    <i class="bi bi-whatsapp"></i> Londrina - Souza Naves 484
                 </a>
             </div>
             <div class="d-flex flex-column flex-grow-1" style="flex-basis: 400px;">
@@ -294,7 +294,7 @@
             </div>
             <div class="d-flex flex-column flex-grow-1 justify-content-center gap-4 p-2 align-items-center flex-basis">
                 <span class="fs-4 fw-bold text-center" data-aos="fade-left">Oie! Só passando pra te <span class="subtitle">lembrar</span>,
-                    que se você usar o nosso cupom. Você ganha <span class="text-primary fs-3">R$200</span> de desconto!</span>
+                    que se você usar o nosso cupom. Você ganha <span class="text-primary fs-3">R$200</span> de desconto em Óculos completo ou Solar!</span>
                 <span class="fs-4 fw-bold text-primary text-end w-100 funnels" data-aos="fade-right">#CashbackdeR$200</span>
                 <div class="d-flex justify-content-end flex-grow-1 align-items-end mt-5" data-aos="fade-down">
                     <img src="assets/img/girl_idle.png" class="img-fluid">
