--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="pt-BR">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
-    <script src="assets/js/gtag.js"></script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Óticas Atual - By Vinicius Leme</title>
     <link rel="icon" href="assets/img/fav.png" type="image/x-icon">
+    <title>Óticas Atual - By Vinicius Leme</title>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -112,7 +108,8 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <img src="assets/img/girl_animation.png" width="500" style="transform: translateY(80px);" alt="Oticas Atual Masc." data-aos="fade-down">
+            <img src="assets/img/girl_animation.png" width="500" style="transform: translateY(80px);"
+                alt="Oticas Atual Masc." data-aos="fade-down">
         </div>
     </section>
 
@@ -168,7 +165,8 @@
     <!-- instagram -->
     <section id="instagram" class="container mt-5 p-2">
         <div class="d-flex flex-row justify-content-around flex-wrap align-items-center gap-4 p-2">
-            <div class="d-flex border rounded-4 p-4 gap-4 flex-column justify-content-center align-items-center flex-grow-1 flex-basis" data-aos="fade-up">
+            <div class="d-flex border rounded-4 p-4 gap-4 flex-column justify-content-center align-items-center flex-grow-1 flex-basis"
+                data-aos="fade-up">
                 <!-- Informações -->
                 <div class="d-flex flex-row justify-content-center align-items-center gap-4 flex-wrap mt-2">
                     <div class="d-flex flex-row gap-4 align-items-center">
@@ -293,9 +291,12 @@
                 </div>
             </div>
             <div class="d-flex flex-column flex-grow-1 justify-content-center gap-4 p-2 align-items-center flex-basis">
-                <span class="fs-4 fw-bold text-center" data-aos="fade-left">Oie! Só passando pra te <span class="subtitle">lembrar</span>,
-                    que se você usar o nosso cupom. Você ganha <span class="text-primary fs-3">R$200</span> de desconto em Óculos completo ou Solar!</span>
-                <span class="fs-4 fw-bold text-primary text-end w-100 funnels" data-aos="fade-right">#CashbackdeR$200</span>
+                <span class="fs-4 fw-bold text-center" data-aos="fade-left">Oie! Só passando pra te <span
+                        class="subtitle">lembrar</span>,
+                    que se você usar o nosso cupom. Você ganha <span class="text-primary fs-3">R$200</span> de desconto
+                    em Óculos completo ou Solar!</span>
+                <span class="fs-4 fw-bold text-primary text-end w-100 funnels"
+                    data-aos="fade-right">#CashbackdeR$200</span>
                 <div class="d-flex justify-content-end flex-grow-1 align-items-end mt-5" data-aos="fade-down">
                     <img src="assets/img/girl_idle.png" class="img-fluid">
                 </div>
@@ -324,19 +325,22 @@
     </section>
 
     <!-- Botão WhatsApp Flutuante -->
-    <a href="#contato" class="whatsapp-float">
-        <i class="bi bi-whatsapp"></i>
-    </a>
+    <a href="#contato" class="whatsapp-float"><i class="bi bi-whatsapp"></i></a>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16570610461"></script>
+
     <!-- AOS JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script>
-        AOS.init(); // Inicializa animações AOS
-    </script>
+
+    <!-- Inicializa animações AOS -->
+    <script>AOS.init();</script>
     <script async src="//www.instagram.com/embed.js"></script>
+
+    <script src="assets/js/gtag.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/analytics.js"></script>
 </body>
